GNOME Bugzilla – Bug 748908
playsink: cannot enable text flag while playing
Last modified: 2015-06-10 08:39:13 UTC
playbin does not configure the text chain correctly in this scenario: - start playing a file with playbin flags=audio|video - set flags to audio|video|text The subtitleoverlay is not linked correctly in this case; playback is stuck in pause when seeking afterwards, and subtitles are never displayed. To reproduce easily use playback-test, only check Audio and Video playbin checkboxes, press play, and then check the Text playbin checkbox.
Any matroska file with embedded subtitles should allow reproducing the issue.
Created attachment 304918 [details] [review] fix playsink issue when text playbin is not enabled in the beginning, then video_srcpad_stream_synchronizer gets linked to videochain->sinkpad and when we try to enable text bin during play, since it is already linked to videochain, text chain does not get linked properly. Hence unlinking the same before linking to text chain
commit 50beddd474f44767d0f2da3f2036cd51fb7ea490 Author: Vineeth TM <vineeth.tm@samsung.com> Date: Wed Jun 10 15:50:12 2015 +0900 playsink: cannot enable text flag while playing when text playbin is not enabled in the beginning, then video_srcpad_stream_synchronizer gets linked to videochain->sinkpad and when we try to enable text bin during play, since it is already linked to videochain, text chain does not get linked properly. Hence unlinking the same before linking to text chain https://bugzilla.gnome.org/show_bug.cgi?id=748908